"clientsSpeakAboutUs" UnwrapBtnVisibility repaired

--- a/css/clientsSpeakAboutUs.css
+++ b/css/clientsSpeakAboutUs.css
@@ -187,7 +187,7 @@
 	height: 1px;
 	width: 10px;
 	background-color: #008139;
-	transition: all 0.5s;
+	transition: transform 0.5s;
 }
 .card__unwrap_btn span:first-of-type{
 	transform: translate(2px, 1px) rotate(45deg);
